--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,28 @@
 :root {
     --bg-color: #121212;
     --text-color: #e0e0e0;
-    --accent-color: #ff9800;
+    --accent-color: #B8B3EA;
 }
 
-body {
-    font-family: Arial, sans-serif;
+html, body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--bg-color);
     color: var(--text-color);
     margin: 0;
     padding: 0;
     text-align: center;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
     background: #1e1e1e;
     padding: 20px;
+}
+
+main {
+    flex: 1; /* Pushes the footer down */
 }
 
 nav a {
@@ -37,14 +44,25 @@ nav a {
     border-radius: 5px;
 }
 
-.project-card a {
-    color: var(--accent-color);
-    text-decoration: none;
+.btn-custom {
+    background-color: var(--accent-color);
+    color: var(--bg-color);
+    padding: 12px 24px;
+    display: inline-block;
     font-weight: bold;
+    text-decoration: none;
+    text-align: center;
+    border-radius: 5px;
+    transition: 0.3s ease-in-out;
+}
+
+.btn-custom:hover {
+    background-color: #8981DD; /* Darker shade on hover */
+    color: white;
 }
 
 footer {
-    margin-top: 50px;
-    padding: 20px;
     background: #1e1e1e;
+    padding: 20px;
+    margin-top: auto; /* This ensures it stays at the bottom */
 }
