--- a/styles.css
+++ b/styles.css
@@ -33,10 +33,29 @@ nav a {
     font-size: 18px;
 }
 
-.hero, .projects, .project-details {
+.hero, .projects{
     margin: 50px auto;
     max-width: 800px;
     padding-bottom: 50px;
+}
+
+.project-details{
+    margin: 50px auto;
+    max-width: 800px;
+    padding-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px; /* Adds spacing between buttons */
+}
+
+.project-details img {
+    height: 300px;
+    width: fit-content;
+    border-radius: 10px;
+}
+
+.project-details p {
+    text-align: left;
 }
 
 .intro {
@@ -108,6 +127,19 @@ footer {
     height: 400px; /* Ensures consistent height */
     object-fit: cover; /* Keeps images from stretching */
     border-radius: 15px; /* Adds rounded corners */
+}
+
+.product-details .video-container video {
+    max-width: 50%;
+    height: auto;
+    transform: rotate(180deg); /* Flips video content */
+    transform-origin: center;
+}
+
+.project-details .video-container{
+    display: flex;
+    align-items: center;
+    width: 100%;
 }
 
 @media (max-width: 768px) { /* Applies when screen width is 768px or smaller */
