--- a/styles.css
+++ b/styles.css
@@ -142,6 +142,10 @@ footer {
     width: 100%;
 }
 
+code{
+    text-align: left;
+}
+
 @media (max-width: 1024px) { /* For tablets (iPads) and smaller */
     
     .project-details {
