--- a/styles.css
+++ b/styles.css
@@ -115,11 +115,24 @@ footer {
     margin-top: auto; /* This ensures it stays at the bottom */
 }
 
-.image-container{
+.image-container-row{
     display: flex; /* Makes images align horizontally */
     justify-content: center; /* Centers images */
     gap: 20px; /* Adds space between images */
     margin-bottom: 20px;
+}
+
+.image-container-column{
+    display: flex; /* Makes images align horizontally */
+    flex-direction: column;
+    align-items: center;
+    gap: 20px; /* Adds space between images */
+    margin-bottom: 20px;
+}
+
+.image-container-column img {
+  width: 850px; /* or any size you want */
+  height: auto;
 }
 
 .project-image {
