--- a/styles.css
+++ b/styles.css
@@ -116,9 +116,10 @@ footer {
 }
 
 .image-container-row{
-    display: flex; /* Makes images align horizontally */
-    justify-content: center; /* Centers images */
-    gap: 20px; /* Adds space between images */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    justify-items: center;
     margin-bottom: 20px;
 }
 
@@ -131,7 +132,7 @@ footer {
 }
 
 .image-container-column img {
-  width: 850px; /* or any size you want */
+  max-width: 100%;
   height: auto;
 }
 
